objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Commentaire</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_1_Price__c</fullName>
        <label>Competitor 1 Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_1__c</fullName>
        <label>Competitor 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_2_Price__c</fullName>
        <label>Competitor 2 Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_2__c</fullName>
        <label>Competitor 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_3_Price__c</fullName>
        <label>Competitor 3 Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_3__c</fullName>
        <label>Competitor 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Competitor__c</fullName>
        <label>Lead Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Name_Competitor__c</fullName>
        <label>Lead Name Competitor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Possible_Matching_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Possible Matching Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Data_quality_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Data quality</label>
        <queue>Data_quality</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
</CustomObject>